--- a/ourteam.html
+++ b/ourteam.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="info">
                         <h3>Dr B V Ravishankar</h3>
-                        <span>Supporter</span>
+                        <span>Principal</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="info">
                         <h3>Dr Syed Hussain</h3>
-                        <span>Mentor</span>
+                        <span>CSE(Data Science HOD)</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -108,8 +108,8 @@
                         <img src="./images/Akshay.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Akshay Sir</h3>
-                        <span>Mentor</span>
+                        <h3>Akshay Mhalaskar</h3>
+                        <span>Entreprenuer</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -125,8 +125,8 @@
                         <img src="./images/navya.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Navya Ma'am</h3>
-                        <span>Mentor</span>
+                        <h3>Dr Navya Rani</h3>
+                        <span>R&D Head</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -142,8 +142,8 @@
                         <img src="./images/image.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Mahesh Sir</h3>
-                        <span>Enterprenuer</span>
+                        <h3>Prof. Mahesh</h3>
+                        <span>Electronics</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -183,7 +183,7 @@
                         <img src="./images/image.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Aishwariya</h3>
+                        <h3>Aishwarya</h3>
                         <span>Developer</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -200,7 +200,7 @@
                         <img src="./images/image.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Noorin</h3>
+                        <h3>Noorain</h3>
                         <span>Developer</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -217,7 +217,7 @@
                         <img src="./images/image.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Afrin</h3>
+                        <h3>Afreen</h3>
                         <span>Developer</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="info">
                         <h3>Vikas Tak</h3>
-                        <span>Developer</span>
+                        <span>Social Media Manager</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
