--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 <div class="row">
     <div class="card">
         <div class="image">
-            <img src="./images/navya.jpg" alt="Team member 1">
+            <img src="./images/vijay.jpg" alt="Team member 1">
         </div>
         <div class="info">
             <h3>Vijayreddy</h3>
