--- a/services/graphicandproductdes.html
+++ b/services/graphicandproductdes.html
@@ -52,25 +52,29 @@
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Logos for companies</h2>
+                <p>Our experienced logo designer creating unique, impactful brand identities for companies. Specializes in memorable, visually appealing logos that enhance brand recognition.</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Brochures</h2>
+                <p>Make your Products & Services memorable. Designed for impact, they engage your audience with compelling visuals and concise, informative content.</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Cosmetic</h2>
+                <p>Let your customers discover your wide range of cosmetic products designed to enhance their natural beauty. Quality, innovation, and elegance in every item.</p>
+            </div>
+        </div>
+        <div class="showcard">
+            <img src="../images/image.png" alt="">
+            <div>
+                <h2>electronic products</h2>
+                <p>Combining advanced technology with user-friendly design, gadgets bring efficiency and convenience to your life.</p>
             </div>
         </div>
     </div>
