--- a/services/iotrobotics.html
+++ b/services/iotrobotics.html
@@ -51,25 +51,22 @@
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Bionic hand</h2>
+                <p>Experience next-generation bionic hands. Our advanced prosthetics blend cutting-edge technology with precise engineering, restoring natural movement and improving quality of life with innovative designs</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Underwater signal amplification and transmission</h2>
+                <p>Improve underwater communication with our signal amplification solutions. We specialize in enhancing transmission clarity and range for efficient underwater operations and exploration.</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Drones for underground metal detection</h2>
+                <p>Utilize drones for underground metal detection. Our advanced technology enables precise scanning and mapping, enhancing efficiency in locating buried metals for various applications.</p>
             </div>
         </div>
     </div>
