--- a/services/softwaredevelopment.html
+++ b/services/softwaredevelopment.html
@@ -51,25 +51,30 @@
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Examination management system</h2>
+                <p>Examination Management System software streamlines exam planning, scheduling, and grading. It enhances accuracy, reduces administrative workload, ensures secure data handling, and provides comprehensive analytics for educational institutions.</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Ngo management system 
+                </h2>
+                <p>NGO Management System software streamlines project tracking, fundraising, volunteer coordination, and reporting, enhancing transparency, resource management, and compliance for non-profit organizations.</p>
             </div>
         </div>
         <div class="showcard">
             <img src="../images/image.png" alt="">
             <div>
-                <h2>Project-3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, obcaecati! Lorem ipsum dolor sit
-                    amet.</p>
+                <h2>Youvathsava full stack page</h2>
+                <p>Youvathsava Full Stack Development project let students to participate in their favorite program of college events. </p>
+            </div>
+        </div>
+        <div class="showcard">
+            <img src="../images/image.png" alt="">
+            <div>
+                <h2>Social NCET Page</h2>
+                <p>A page where students can connect to the alumnis and exceptional students of their college for guidance and market requirements.</p>
             </div>
         </div>
     </div>
