--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     </div>
                     <div class="info">
                         <h3>Ravi Desai</h3>
-                        <span>Director</span>
+                        <span>Founder</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                             <a href="https://twitter.com/login" class="fab fa-twitter"></a>
@@ -306,7 +306,7 @@
                 </div>
                 <div class="info">
                     <h3>Gaurav Kumawat </h3>
-                    <span>CTO </span>
+                    <span>Co-Founder</span>
                     <div class="icons">
                         <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
                         <a href="https://twitter.com/login" class="fab fa-twitter"></a>
