--- a/ourteam.html
+++ b/ourteam.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Nagarjuna Tech Solutions </title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/careers.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="icon" href="./images/nit.png">
+    <link rel="icon" href="../images/nit.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -29,33 +30,20 @@
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html#home">home</a></li>
-                <li><a href="index.html#about">about</a></li>
-                <li><a href="index.html#service">services</a></li>
-                <li><a href="index.html#portfolio">portfolio</a></li>
-                <li><a href="index.html#team">team</a></li>
-                <li><a href="careers.html">career</a></li>
-                <li><a href="index.html#contact">contact</a></li>
-                <li><a href="index.html#faq">FAQ</a></li>
+                <li><a href="./index.html#home">home</a></li>
+                <li><a href="./index.html#about">about</a></li>
+                <li><a href="./index.html#service">services</a></li>
+                <li><a href="./index.html#portfolio">portfolio</a></li>
+                <li><a href="./index.html#team">team</a></li>
+                <li><a href="./careers.html">career</a></li>
+                <li><a href="./index.html#contact">contact</a></li>
+                <li><a href="./index.html#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
     <section id="home" class="home">
-        <h1> Nagarjuna Tech Solutions</h1>
-        <h2>Transforming Vision Into Reality</h2>
-        <div class="wave wave1"></div>
-        <div class="wave wave2"></div>
-        <div class="wave wave3"></div>
+        <h2>The Ones Who Create Change.. Our Team..</h2>
     </section>
-    <!-- <a href="#" class="back-to-top"><i class="ion-ios-arrow-up"></i></a> -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/lightbox/js/lightbox.min.js"></script>
 
     <section class="team" style="margin-top: 7rem; margin-bottom:0px">
         <div id="ourteamgradbg">
@@ -80,6 +68,9 @@
             </div>
         </div>
     </section>
+
+
+
     <section class="team" style="margin-top:0px; margin-bottom:0px">
         <div>
 
@@ -163,7 +154,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/tejas.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Tejas</h3>
@@ -180,7 +171,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/aish.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Aishwarya</h3>
@@ -197,7 +188,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/noorain.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Noorain</h3>
@@ -214,7 +205,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/afreen.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Afreen</h3>
@@ -231,7 +222,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/abhi.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Abhishek</h3>
@@ -248,7 +239,7 @@
             <div class="row">
                 <div class="card">
                     <div class="image">
-                        <img src="./images/image.png" alt="Team member 1">
+                        <img src="./images/vikas.jpg" alt="Team member 1">
                     </div>
                     <div class="info">
                         <h3>Vikas Tak</h3>
@@ -264,12 +255,6 @@
             </div>
         </div>
     </section>
-
-
-        </div>
-
-    </section>
-
     <div class="footer">
         <div class="footer-top">
             <div class="container">
