--- a/ourteam.html
+++ b/ourteam.html
@@ -146,7 +146,7 @@
             </div>
         </div>
     </section>
-    <section class="team" style="margin-bottom: 4rem; margin-top: 0px">
+    <section class="team" style="padding-bottom: 4rem; margin-top: 0px">
         <div>
 
             <h1 class="heading" style="margin-top: -1.5rem;" id="team"> <b>Team </b></h1>
