name ourteam.html
name update

--- a/ourteam.html
+++ b/ourteam.html
@@ -259,7 +259,7 @@
                         <img src="./images/image.png" alt="Team member 1">
                     </div>
                     <div class="info">
-                        <h3>Subhanshu</h3>
+                        <h3>Shubhanshu</h3>
                         <span>Resources Manager</span>
                         <div class="icons">
                             <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
