--- a/services/cybersecurity.html
+++ b/services/cybersecurity.html
@@ -49,28 +49,28 @@
     <div class="showcardgroup">
         <h1>cybersecurity</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/blockchain.jpg" width="200" alt="">
             <div>
                 <h2>Data integrity using blockchain</h2>
                 <p>Ensure data integrity with blockchain technology. Our solution provides secure, transparent, and immutable records, safeguarding information against tampering and ensuring trust in digital transactions.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/aes.png" width="200"  alt="">
             <div>
                 <h2>Data encryption using aes</h2>
                 <p>Secure your data with AES encryption. AES (Advanced Encryption Standard) ensures robust protection, encrypting sensitive information to prevent unauthorized access and maintain confidentiality.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/smart contract.png"  width="200" alt="">
             <div>
                 <h2>Transactions using smart contracts</h2>
                 <p>Facilitate secure transactions with smart contracts. These automated protocols on blockchain execute agreements without intermediaries, ensuring transparency, efficiency, and trust in digital transactions.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/ml in fraud detection.jpeg" width="200"  alt="">
             <div>
                 <h2>Fraud detection using machine learning</h2>
                 <p>Enhance fraud detection with machine learning. Our algorithms analyze patterns in data to detect anomalies and mitigate risks, ensuring secure transactions and protecting against fraudulent activities.</p>
