--- a/services/electronics.html
+++ b/services/electronics.html
@@ -49,21 +49,21 @@
     <div class="showcardgroup">
         <h1>Electronics</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/pcb pic.png" width="200" alt="">
             <div>
                 <h2>PCB designs</h2>
                 <p>Achieve precision and performance with our expert PCB design services. We specialize in creating efficient circuit board solutions tailored to your electronic needs.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/embeded sys.png" width="200" alt="">
             <div>
                 <h2>Embedded system</h2>
                 <p>Optimize functionality with our embedded systems expertise. We design reliable solutions tailored to your specifications, ensuring seamless integration and enhanced performance for your applications</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/ros.png" width="200" alt="">
             <div>
                 <h2>ROS</h2>
                 <p>We provide comprehensive solutions for Robot Operating System (ROS), enhancing development efficiency and system integration for advanced robotic applications.</p>
