--- a/services/graphicandproductdes.html
+++ b/services/graphicandproductdes.html
@@ -50,28 +50,21 @@
     <div class="showcardgroup">
         <h1>Graphic & Product Designing</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/Logo design.png"  width="200" alt="">
             <div>
                 <h2>Logos for companies</h2>
                 <p>Our experienced logo designer creating unique, impactful brand identities for companies. Specializes in memorable, visually appealing logos that enhance brand recognition.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/brochure.png" width="200"  alt="">
             <div>
                 <h2>Brochures</h2>
                 <p>Make your Products & Services memorable. Designed for impact, they engage your audience with compelling visuals and concise, informative content.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
-            <div>
-                <h2>Cosmetic</h2>
-                <p>Let your customers discover your wide range of cosmetic products designed to enhance their natural beauty. Quality, innovation, and elegance in every item.</p>
-            </div>
-        </div>
-        <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/electronic circuit.png" width="200"  alt="">
             <div>
                 <h2>electronic products</h2>
                 <p>Combining advanced technology with user-friendly design, gadgets bring efficiency and convenience to your life.</p>
