--- a/services/trainingandinternship.html
+++ b/services/trainingandinternship.html
@@ -49,21 +49,21 @@
     <div class="showcardgroup">
         <h1>Training and Internships</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/robotics.png" width="200"  alt="">
             <div>
                 <h2>Iot / robotics</h2>
                 <p>Excel in IoT and robotics through our training and internship programs. Acquire hands-on experience, learn cutting-edge technologies, and advance your career in these innovative fields.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/web developemnt.png" width="200"  alt="">
             <div>
                 <h2>Full stack development</h2>
                 <p>Advance your career in full-stack development with our intensive training and internship programs. Gain expertise in front-end and back-end technologies for success in software engineering.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/analytics.jpeg"  width="200" alt="">
             <div>
                 <h2>Business analytics</h2>
                 <p>Enhance business analytics with our comprehensive solutions. Gain insights, optimize strategies, and drive growth with data-driven decisions and advanced analytical tools.</p>
