--- a/services/softwaredevelopment.html
+++ b/services/softwaredevelopment.html
@@ -49,14 +49,14 @@
     <div class="showcardgroup">
         <h1>Software Development</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/exam logo.png" width="200"  alt="">
             <div>
                 <h2>Examination management system</h2>
                 <p>Examination Management System software streamlines exam planning, scheduling, and grading. It enhances accuracy, reduces administrative workload, ensures secure data handling, and provides comprehensive analytics for educational institutions.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/ngo logo.png"  width="200" alt="">
             <div>
                 <h2>Ngo management system 
                 </h2>
@@ -64,17 +64,10 @@
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/image.png"  width="200" alt="">
             <div>
                 <h2>Youvathsava full stack page</h2>
                 <p>Youvathsava Full Stack Development project let students to participate in their favorite program of college events. </p>
-            </div>
-        </div>
-        <div class="showcard">
-            <img src="../images/image.png" alt="">
-            <div>
-                <h2>Social NCET Page</h2>
-                <p>A page where students can connect to the alumnis and exceptional students of their college for guidance and market requirements.</p>
             </div>
         </div>
     </div>
