--- a/services/iotrobotics.html
+++ b/services/iotrobotics.html
@@ -49,21 +49,21 @@
     <div class="showcardgroup">
         <h1>IoT / Robotics</h1>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/bionic arm.png" width="200"  alt="">
             <div>
                 <h2>Bionic hand</h2>
                 <p>Experience next-generation bionic hands. Our advanced prosthetics blend cutting-edge technology with precise engineering, restoring natural movement and improving quality of life with innovative designs</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/underwater signals.png"  width="200" alt="">
             <div>
                 <h2>Underwater signal amplification and transmission</h2>
                 <p>Improve underwater communication with our signal amplification solutions. We specialize in enhancing transmission clarity and range for efficient underwater operations and exploration.</p>
             </div>
         </div>
         <div class="showcard">
-            <img src="../images/image.png" alt="">
+            <img src="../images/drones.jpg" width="200"  alt="">
             <div>
                 <h2>Drones for underground metal detection</h2>
                 <p>Utilize drones for underground metal detection. Our advanced technology enables precise scanning and mapping, enhancing efficiency in locating buried metals for various applications.</p>
